Grid gap fix

--- a/level_2_3/src/components/Grid/style.scss
+++ b/level_2_3/src/components/Grid/style.scss
@@ -4,16 +4,19 @@
   margin-top: 2em;
   // layout
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax($width, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(15em, 1fr));
   grid-row-gap: 2em;
-  grid-column-gap: 0.5em;
+  grid-column-gap: 3em;
   justify-items: center;
 
-  @include for-size('desktop-up') {
-    justify-items: flex-start;
+  @include for-size('tablet-portrait-up') {
+    grid-column-gap: 7em;
+    grid-template-columns: repeat(auto-fit, minmax(10em, 1fr));
   }
 
   @include for-size('desktop-up') {
-    grid-column-gap: 1em;
+    grid-column-gap: 0.3em;
+    justify-items: flex-start;
+    grid-template-columns: repeat(auto-fit, minmax($width, 1fr));
   }
 }
